--- a/multi_master/saltstack/master/Dockerfile
+++ b/multi_master/saltstack/master/Dockerfile
@@ -1,4 +1,4 @@
-FROM salt-muti-master-image
+FROM salt-multi-master-image
 
 ADD master /etc/salt/master
 ADD master_minion.pem /etc/salt/pki/master.pem
